03. cluster-with-devtron/devtron_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devtron-ingress
  namespace: devtroncd
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: devtron-service
                port:
                  number: 80
